--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 v2.0.3
+    * added support for multiple plugin directories using $plugin_path
 	* changed plugin loading to use @INC instead of hardcoded 
 	  $plugin_dir
 	* added support for external config file via BLOSXOM_CONFIG_DIR 
