Bugfix: Default RSS feed failed feed validation at http://www.feedvalidator.org/ if there was a blank inside a file name since blanks (and other characters) need to be escaped inside an URL. Most browsers do this, but not all.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ v2.1.0
 	* added support for external config file via BLOSXOM_CONFIG_DIR 
 	  and/or BLOSXOM_CONFIG_FILE environment variables
 	* added support for $plugin_list plugin config file
+    * fixed some RSS escaping issues
     * made the default templates conforming to HTML 4.01
     * added a testsuite for blosxom
     * added an encoding setting, defaulting to UTF-8
