--- a/ChangeLog
+++ b/ChangeLog
@@ -7,12 +7,15 @@ v2.1.0
 	* added support for external config file via BLOSXOM_CONFIG_DIR 
 	  and/or BLOSXOM_CONFIG_FILE environment variables
 	* added support for $plugin_list plugin config file
-    * fixed some RSS escaping issues
+    * fixed several RSS and XHTML escaping issues (Closes: #1717980)
     * made the default templates conforming to HTML 4.01
+      (Closes: #1609595)
     * added a testsuite for blosxom
     * added an encoding setting, defaulting to UTF-8
     * added support for configuration files and therefore blosxom farms
       (based on the Debian config file patch)
+    * allowed the content of the content type template to be used as
+      variable in other templates, e.g. for usage with <meta> tags.
     * many small improvements
     * some code refactoring (including a .perltidyrc)
 
