--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 v2.1.1
+    * The "never trust a dot zero release" bugfix release for 2.1.0.
     * Added CVS Id keyword to file header.
     * Declaring $encode_xml_entities as a config option by moving it into
       the config section -- no functionality change.
