--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ blosxom (2.1.1-1) unstable; urgency=low
 
   * New upstream release which fixes a regression from the previous blosxom
     2.0 version we have currently in stable.
+  * Add Vcs-* informations to source control file.
 
- -- Gerfried Fuchs <rhonda@debian.at>  Wed, 06 Aug 2008 18:44:21 -0300
+ -- Gerfried Fuchs <rhonda@debian.at>  Wed, 06 Aug 2008 18:50:14 -0300
 
 blosxom (2.1.0-1) unstable; urgency=low
 
