--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ blosxom (2.1.1-1) unstable; urgency=low
   * New upstream release which fixes a regression from the previous blosxom
     2.0 version we have currently in stable.
   * Add Vcs-* informations to source control file.
+  * Forgot to mention in the previous upload that I added Axel Beckert as
+    Co-Maintainer. Welcome on board. :)
 
- -- Gerfried Fuchs <rhonda@debian.at>  Wed, 06 Aug 2008 18:50:14 -0300
+ -- Gerfried Fuchs <rhonda@debian.at>  Wed, 06 Aug 2008 18:50:58 -0300
 
 blosxom (2.1.0-1) unstable; urgency=low
 
