Fix copyright year information for Rael on blosxom.cgi.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,9 @@ blosxom (2.1.1-1) unstable; urgency=low
 
   [ Axel Beckert ]
   * Clearified debian/NEWS.Debian with respect to rss aggregators.
+  * Fix copyright year information for Rael on blosxom.cgi.
 
- -- Gerfried Fuchs <rhonda@debian.at>  Wed, 06 Aug 2008 20:13:25 -0300
+ -- Gerfried Fuchs <rhonda@debian.at>  Wed, 06 Aug 2008 20:37:13 -0300
 
 blosxom (2.1.0-1) unstable; urgency=low
 
